# fastapi-firebase

./: .gitignore  pyproject.toml
app/: main.py
app/api/: router.py
app/api/v1/: router.py
app/core/: config.py  firebase.py
